<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#2196F3"
        android:textSize="48sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:background="#FFFFFF"
                android:padding="3dip"
                android:text="@string/string_header_key"
                android:textColor="#2196F3"
                android:textSize="24sp" />
            <TextView
                android:padding="3dip"
                android:text="@string/string_header_value"
                android:textColor="#2196F3"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/string_ACCX" />
            <TextView

                android:padding="3dip"
                android:id="@+id/ACCX"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/string_ACCY" />
            <TextView

                android:padding="3dip"
                android:id="@+id/ACCY"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/string_ACCZ" />
            <TextView

                android:padding="3dip"
                android:id="@+id/ACCZ"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/string_Latitude" />
            <TextView

                android:padding="3dip"
                android:id="@+id/Latitude"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/string_Longitude" />
            <TextView

                android:padding="3dip"
                android:id="@+id/Longitude"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/string_Light" />
            <TextView

                android:padding="3dip"
                android:id="@+id/Light"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/string_Steps" />
            <TextView

                android:padding="3dip"
                android:id="@+id/Steps"/>
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/main_back"
        android:layout_width="117dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:background="#2196F3"
        android:text="ZURÜCK"
        android:textColor="#FFFFFF"
        android:textSize="24dp" />
</LinearLayout>
